<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/app_name">
            <menu>
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_home_black_24dp"
                    android:title="@string/title_home" />

                <item
                    android:id="@+id/nav_dashboard"
                    android:icon="@drawable/ic_dashboard_black_24dp"
                    android:title="@string/title_dashboard" />

                <item
                    android:id="@+id/nav_videos"
                    android:icon="@drawable/ic_video_library"
                    android:title="@string/title_video_library" />


                <item
                    android:id="@+id/nav_photos"
                    android:icon="@drawable/ic_photo_library"
                    android:title="@string/title_photo_library" />
            </menu>
        </item>

        <item android:title="About">
            <menu>

                <item
                    android:id="@+id/nav_budgam_scouts"
                    android:icon="@drawable/ic_info"
                    android:title="@string/title_budgam_scouts" />

            </menu>
        </item>

        <item android:title="Contact &amp; Donate">
            <menu>

                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/ic_login"
                    android:title="@string/title_login" />

               <!-- <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/title_logout" />-->

            </menu>
        </item>
    </group>
</menu>
