<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.suhail.bsgbudgam.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.suhail.bsgbudgam.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_videos_library"
        android:name="com.suhail.bsgbudgam.ui.videos.VideosFragment"
        android:label="@string/title_video_library"
        tools:layout="@layout/fragment_videos" />

    <fragment
        android:id="@+id/navigation_photo_library"
        android:name="com.suhail.bsgbudgam.ui.photos.PhotosFragment"
        android:label="@string/title_photo_library"
        tools:layout="@layout/fragment_photos" />
</navigation>
